# kvoice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/kvoice/: kv_vector.hpp  kvoice.hpp  sound_input.hpp  sound_output.hpp  stream.hpp  voice_exception.hpp
src/: kvoice.cpp  ringbuffer.hpp  sound_input_impl.cpp  sound_input_impl.hpp  sound_output_impl.cpp  sound_output_impl.hpp  stream_impl.cpp  stream_impl.hpp
